<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="home.com.tamagotchi2.MainActivity">

    <LinearLayout
        android:id="@+id/titles_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_hunger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/hunger"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_energy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/energy"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_hygiene"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/hygiene"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_fun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/fun"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pb_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titles_panel"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titles_panel">

        <ProgressBar
            android:id="@+id/pb_hunger"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50" />

        <ProgressBar
            android:id="@+id/pb_energy"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50" />

        <ProgressBar
            android:id="@+id/pb_hygiene"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50" />

        <ProgressBar
            android:id="@+id/pb_fun"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50" />

    </LinearLayout>


    <ImageView
        android:id="@+id/iv_pet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btns_panel_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_panel"
        app:srcCompat="@drawable/cat_need_wash" />

    <LinearLayout
        android:id="@+id/btns_panel_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btns_panel_2"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_eat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_local_dining_black_36dp"
            android:text="@string/eat"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_sleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_wb_incandescent_black_36dp"
            android:text="@string/sleep"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_wash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_hot_tub_black_36dp"
            android:text="@string/wash"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns_panel_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btns_panel_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_heal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_local_hospital_black_36dp"
            android:text="@string/heal"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_videogame_asset_black_36dp"
            android:text="@string/play"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_touch_app_black_36dp"
            android:text="@string/task"
            android:textSize="10sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
